<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurfaceContainer"
    android:padding="?attr/dialogPreferredPadding"
    tools:ignore="Overdraw">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/dialog_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorError"
        tools:src="@drawable/ic_warning" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_title"
        style="?attr/textAppearanceHeadlineSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:maxLines="4"
        android:scrollbars="none"
        android:textAlignment="center"
        android:textColor="?attr/colorError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_icon"
        tools:text="@string/free_android_warn_title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_container"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:scrollbars="none">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dialog_message"
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="20"
                tools:text="@string/free_android_warn_message" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/more_info_link"
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="?attr/selectableItemBackground"
                android:paddingVertical="2dp"
                android:text="@string/free_android_warn_link"
                android:textColor="?attr/colorPrimary" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/negative_button"
        style="@style/Widget.Material3Expressive.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@id/positive_button"
        app:layout_constraintEnd_toStartOf="@id/positive_button"
        app:layout_constraintTop_toTopOf="@id/positive_button"
        tools:text="@string/free_android_warn_solution_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/positive_button"
        style="@style/Widget.Material3Expressive.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_container"
        tools:text="@android:string/ok" />
</androidx.constraintlayout.widget.ConstraintLayout>