<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/updater_title"
        style="?attr/textAppearanceHeadlineSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:maxLines="4"
        android:paddingHorizontal="14dp"
        android:textAlignment="center"
        tools:text="@string/updater_title" />

    <com.google.android.material.chip.Chip
        android:id="@+id/updater_version"
        style="@style/Widget.Material3.Chip.Assist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:focusable="false"
        android:textColor="?attr/colorOnTertiaryContainer"
        app:chipBackgroundColor="?attr/colorTertiaryContainer"
        app:chipCornerRadius="20dp"
        app:chipEndPadding="2dp"
        app:chipIconTint="?attr/colorOnTertiaryContainer"
        app:chipStartPadding="2dp"
        app:chipStrokeWidth="0dp"
        tools:text="@string/updater_version" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_top"
        style="?attr/materialDividerStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        app:dividerColor="@color/divider_color"
        app:dividerThickness="1dp"
        tools:visibility="visible" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_changelog"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="?attr/dialogPreferredPadding"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="?attr/dialogPreferredPadding"
                app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/updater_changelog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="16dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    tools:text="@string/app_name" />
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/download_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:visibility="gone"
        tools:progress="60"
        tools:visibility="visible" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_bottom"
        style="?attr/materialDividerStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        app:dividerColor="@color/divider_color"
        app:dividerThickness="1dp"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/github_button"
            style="@style/Widget.Material3Expressive.Button.TonalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?attr/dialogPreferredPadding"
            android:layout_marginEnd="4dp"
            android:text="@string/updater_github_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/download_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/download_button"
            style="@style/Widget.Material3Expressive.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="?attr/dialogPreferredPadding"
            android:text="@string/updater_download_button"
            app:icon="@drawable/ic_download"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/github_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>